...
        Obstacles(numberOfLanes, viewModel,
            obstacleHeightDp, obstacleWidthDp,
            viewModel.newCrashes, laneColors
        )

        Box(
            modifier = Modifier.fillMaxSize().testTag("gameScreen"),
            contentAlignment = Alignment.TopCenter
        ) {
            Car(
                offsetX = viewModel.carPositionX.collectAsState().value,
                offsetY = carPositionY,
                height = obstacleHeightDp,
...
    Box(modifier = Modifier.fillMaxSize()) {
        Button(
            onClick = onQuit,
            modifier = Modifier
                .align(Alignment.BottomCenter)
                .padding(bottom = 64.dp)
                .testTag("quitButton"),
            colors = ButtonDefaults.buttonColors(
                containerColor = Color(0xFFB71C1C),
                contentColor = Color(0xFFFFF9C4)
            ),
            shape = RoundedCornerShape(8.dp),
            border = BorderStroke(2.dp, Color.Black)
...
